# programming-assignment-supersliser

./: .gitignore  CMakeLists.txt  ClassDiagram.md  MoveFlowchart.md  README.md
docs/: ClassDiagram.puml  addingComponents.md  fullUML.md  fullUML.puml
docs/UMLItems/: Table.puml
docs/UMLItems/component/: BlockComponent.puml  BlockTextureComponent.puml  CameraComponents.puml  Entities.puml  IsSprintingComponent.puml  SpeedComponent.puml  TransformComponents.puml
docs/UMLItems/system/: ApplyBlockTextureSystem.puml  MovePlayerSystem.puml  PlayerFallSystem.puml  RenderWorldSystem.puml  RotateCameraSystem.puml  SetCameraLookSystem.puml  SetPlayerPositionSystem.puml  SetPositionSystem.puml  SetSprintingSystem.puml  System.puml  TestIsBlockedSystem.puml  ToggleSprintingSystem.puml
include/: Camera.h  ColonistEntity.h  Colony.h  Component.h  Entity.h  EntityManager.h  FillableInventory.h  GenerateWorld.h  Hotbar.h  Inventory.h  Item.h  MoveSystem.h  MoveableEntity.h  ObjectEntity.h  PerlinNoise.hpp  PlaceableItem.h  PlacedEntity.h  PlayerEntity.h  PositionComponent.h  SDLWindowManager.h  Slot.h  System.h  Table.h  TransformComponent.h  UseableItem.h  Utils.h  dir.h  e_item.h  e_job.h  utils.h
include/component/: BlockComponent.h  BlockComponents.h  BlockDisplayComponent.h  BlockTextureComponent.h  BlockType.h  CameraComponents.h  ChunkComponent.h  Column.h  Entities.h  Entity.h  IsSprintingComponent.h  PositionComponent.h  SpeedComponent.h  TransformComponent.h  TransformComponents.h
include/nglExtension/: MultiBufferInstanceVAO.h
include/system/: ApplyBlockTextureSystem.h  ChunkedPlayerFallSystem.h  MovePlayerSystem.h  MoveSystem.h  PlayerFallSystem.h  RenderChunkedWorldSystem.h  RenderCubeSystem.h  RenderWorldSystem.h  RotateCameraSystem.h  SetCameraLookSystem.h  SetChunkPositionSystem.h  SetPlayerPositionSystem.h  SetPositionSystem.h  SetSprintingSystem.h  System.h  TestChunkSystem.h  TestIsBlockedSystem.h  ToggleSprintingSystem.h  UpdateChunkToGPUSystem.h
shaders/: TextureFrag.glsl  TextureVert.glsl
src/: Camera.cpp  ColonistEntity.cpp  Entity.cpp  FillableInventory.cpp  GenerateWorld.cpp  Hotbar.cpp  Inventory.cpp  Item.cpp  MoveSystem.cpp  MoveableEntity.cpp  NGLDraw.cpp  ObjectEntity.cpp  PlaceableItem.cpp  PlayerEntity.cpp  SDLWindowManager.cpp  Slot.cpp  Table.cpp  UseableItem.cpp  Utils.cpp  main.cpp  utils.cpp
src/component/: BlockComponent.cpp  BlockComponents.cpp  BlockDisplayComponent.cpp  BlockTextureComponent.cpp  CameraComponents.cpp  ChunkComponent.cpp  Entities.cpp  Entity.cpp  IsSprintingComponent.cpp  PositionComponent.cpp  SpeedComponent.cpp  TransformComponent.cpp  TransformComponents.cpp
src/nglExtension/: MultiBufferInstanceVAO.cpp
src/system/: ApplyBlockTextureSystem.cpp  ChunkedPlayerFallSystem.cpp  MovePlayerSystem.cpp  MoveSystem.cpp  PlayerFallSystem.cpp  RenderChunkedWorldSystem.cpp  RenderCubeSystem.cpp  RenderWorldSystem.cpp  RotateCameraSystem.cpp  SetCameraLookSystem.cpp  SetPlayerPositionSystem.cpp  SetPositionSystem.cpp  SetSprintingSystem.cpp  TestChunkSystem.cpp  TestIsBlockedSystem.cpp  ToggleSprintingSystem.cpp  UpdateChunkToGPUSystem.cpp
tests/: ColonistEntityTests.cpp  GenerateWorldTests.cpp  ItemTests.cpp  NoiseTests.cpp  PlayerEntityTests.cpp  PlayerStepTests.cpp  PlayerTests.cpp  SDLTest.cpp  TableTests.cpp  WorldTests.cpp
textureResources/: Dirt.sbs  Grass.sbs  Leaf.psd  Leaves.sbs  Log.sbs  Planks.sbs  Stone.sbs  leafRef.txt
textureResources/.autosave/: Dirt_0.sbs  Grass_0.sbs
